fix: social network align items

--- a/css/style.css
+++ b/css/style.css
@@ -1070,7 +1070,7 @@ template {
   grid-row: 2/4;
   grid-column: span 2;
   display: flex;
-  align-content: center;
+  align-items: start;
 }
 .footer__contact-details {
   grid-column: span 2;
