--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -23,7 +23,7 @@
             grid-row: 2 / 4
             grid-column: span 2
             display: flex
-            align-content: center
+            align-items: start
     &__contact
         &-details
             grid-column: span 2
